2. Отсортировать департаменты [#34352]